# ssdid-drive

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.dev.md  README.md  SsdidDrive.sln  compose.local.yml  compose.yml  docker-compose.yml  podman-compose.e2e.yml
.githooks/: pre-push
.github/workflows/: admin-ci.yml  android-ci.yml  android-release.yml  android.yml  api-ci.yml  backend-cd.yml  backend-ci.yml  cd.yml  desktop-ci.yml  desktop-release.yml  e2e-tests.yml  ios-ci.yml  ios-release.yml  ios.yml  pii-service-ci.yml  pii-service-deploy.yml  securesharing-ci.yml  securesharing-deploy.yml
clients/admin/: index.html  package-lock.json  package.json  vite.config.ts
clients/android/: FIXME_CHECKLIST.md  README.md  build.gradle.kts  gradle.properties  keystore.properties.template  local.properties  local.properties.example  settings.gradle.kts
clients/desktop/: .env.example  .eslintrc.cjs  .gitignore  Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
clients/desktop/native/kaz-kem-sys/: Cargo.toml  build.rs
clients/desktop/native/kaz-kem-sys/src/: lib.rs
clients/desktop/native/kaz-sign-sys/: Cargo.toml  build.rs
clients/desktop/native/kaz-sign-sys/src/: lib.rs
clients/desktop/native/ssdid-drive-crypto/: Cargo.toml
clients/desktop/native/ssdid-drive-crypto/src/: kaz_kem.rs  kaz_sign.rs  lib.rs  ml_kem.rs  shamir.rs  symmetric.rs
clients/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
clients/desktop/src-tauri/src/commands/: account.rs  activity.rs  auth.rs  biometric.rs  credentials.rs  crypto.rs  email_auth.rs  file_provider.rs  files.rs  mod.rs  notifications.rs  oidc.rs  oidc_auth.rs  pii.rs  recovery.rs  settings.rs  sharing.rs  sync.rs  tenant.rs  totp.rs  webauthn.rs
clients/desktop/src-tauri/src/models/: auth_provider.rs  file.rs  mod.rs  notification.rs  share.rs  tenant.rs  user.rs
clients/desktop/src-tauri/src/services/: api_client.rs  app_group_service.rs  auth_service.rs  biometric_service.rs  cert_pinner.rs  crypto_service.rs  file_service.rs  mod.rs  notification_service.rs  oidc_service.rs  pii_service.rs  recovery_service.rs  sharing_service.rs  sync_service.rs  tenant_service.rs  webauthn_service.rs
clients/desktop/src-tauri/src/storage/: database.rs  keyring.rs  mod.rs
clients/ios/: project.yml
clients/landing/: index.html  invite.html
docs/: 5. Scope of Work_MDCB04S2026.xlsx  CI-CD-SETUP.md  README.md  SecureSharing_Technical_Specification.xlsx  TENDER_TECHNICAL_SPECIFICATION.docx  TENDER_TECHNICAL_SPECIFICATION.md  TEST_PLAN.md  api-keys.md  deployment-guide.md  e2e-test-metrics.md  openapi.yaml  role-matrix.md  ssdid-drive-deeplink-protocol.md  test-cases.md
docs/api/: 01-authentication.md  02-users.md  03-files.md  04-folders.md  05-sharing.md  06-recovery.md  07-error-codes.md  08-notifications.md  09-invitations.md
docs/architecture/: macos-feature-coverage.md  macos-implementation-plan.md
docs/crypto/: 01-algorithm-suite.md  02-key-hierarchy.md  03-encryption-protocol.md  04-key-encapsulation.md  05-signature-protocol.md  06-shamir-recovery.md  07-test-vectors.md
docs/data-model/: 01-entities.md  02-database-schema.md  03-typescript-interfaces.md  04-wire-format.md
docs/deployment/: backup-restore.md  contabo-hosting-sizing.md  hardware-sizing-guide.docx  hardware-sizing-guide.md  hetzner-two-server-deployment.md  ipserverone-hosting-sizing.md  monitoring-observability.md  pii-service-deployment.md  production-guide.md  secrets.md  troubleshooting.md  (+1 more)
mockups/: mobile-app.html
scripts/: deploy-static.sh  dev-setup.sh  dev-uninstall.sh  garage-init.sh
(+1946 files in other folders)
