[package]
name = "ssdid-drive-desktop"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"
description = "SSDID Drive Desktop - Secure file sharing with post-quantum cryptography"
authors = ["SSDID Team"]
license = "Proprietary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"

# Crypto (our crates)
ssdid-drive-crypto = { path = "../native/ssdid-drive-crypto" }

# Key storage
keyring = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls", "stream", "multipart"] }

# Local database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error tracking
sentry = { version = "0.35", default-features = false, features = ["backtrace", "contexts", "panic", "tracing", "reqwest", "rustls"] }
sentry-tracing = "0.35"

# Utilities
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
once_cell = "1"
parking_lot = "0.12"
dirs = "6"
rand = "0.8"
sha2 = "0.10"
mime_guess = "2"
zeroize = { version = "1.8", features = ["derive"] }
urlencoding = "2"
subtle = "2.5"

# Platform-specific biometric authentication
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSError", "NSString"] }
block2 = "0.5"
security-framework = "2.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
